--- a/requirements.txt
+++ b/requirements.txt
@@ -2,20 +2,20 @@ botocore==1.12.176
 certifi==2019.6.16
 chardet==3.0.4
 dj-database-url==0.5.0
-Django==2.2.2
+Django==2.2.5
 django-crispy-forms==1.7.2
-django-filter==2.1.0
 django-heroku==0.3.1
-docutils==0.14
 gunicorn==19.9.0
-idna==2.7
+heroku==0.1.4
 jmespath==0.9.4
-Pillow==6.0.0
-psycopg2==2.8.2
+Pillow==6.1.0
+pipenv==2018.11.26
+psycopg2==2.8.3
 python-dateutil==2.8.0
-pytz==2019.1
-requests==2.20.1
-six==1.11.0
-urllib3==1.24.3
-whitenoise==4.0
-
+pytz==2019.2
+requests==2.22.0
+sqlparse==0.3.0
+urllib3==1.25.3
+virtualenv==16.7.5
+virtualenv-clone==0.5.3
+whitenoise==4.1.3
